# karmakaze

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  update-version.sh
.github/: FUNDING.yml
.github/workflows/: python-package.yml
src/karmakaze/: __init__.py  _main.py  _parse.py  _sanitise.py  _tools.py  deserialise.py  klean.py  parse.py  sanitise.py  strukt.py  tools.py
tests/: test_deserialise.py  test_klean.py  test_parse.py  test_sanitise.py  test_sanitise_and_parse.py
