[tool.poetry]
name = "karmakaze"
version = "1.3.0"
description = "Data sanitation engine for Knew Karma"
authors = ["Richard Mwewa <rly0nheart@duck.com>"]
license = "MIT License"
readme = "README.md"
keywords = ["reddit", "reddit-api"]
homepage = "https://knewkarma.readthedocs.io"
repository = "https://github.com/rly0nheart/karmakaze"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rly0nheart/karmakaze/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
poetry = "^1.8.3"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
