[tool.poetry]
name = "karmakaze"
version = "3.0.0"
description = "Response sanitation & parsing engine for KRAW"
authors = ["Richard Mwewa <rly0nheart@duck.com>", "Knew Karma IO <redacted@redacted.com"]
license = "GPL-3.0+"
readme = "README.md"
homepage = "https://knewkarma.readthedocs.io"
repository = "https://github.com/knewkarma-io/karmakaze"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
poetry = "^1.8.3"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
